DuPont DevSB/src/objects/ChatterPolicy__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for providing access permissions to Post Chatter files/links/comments in the Chatter at an Organization level</description>
    <fields>
        <fullName>Share_Files_on_CPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Files on Chatter Public Groups</description>
        <label>Share Files on Chatter Public Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Files_on_OtherCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Files on Other Chatter Profiles</description>
        <label>Share Files on Other Chatter Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Files_on_OwnCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Files on Own Chatter Profile</description>
        <label>Share Files on Own Chatter Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Links_on_CPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Links on Chatter Public Groups</description>
        <label>Share Links on Chatter Public Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Links_on_OtherCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Links on Other Chatter Profiles</description>
        <label>Share Links on Other Chatter Profiles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_Links_on_OwnCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Links on Own Chatter Profile</description>
        <label>Share Links on Own Chatter Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_comments_on_CPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Comments on Chatter Public Groups</description>
        <label>Share Comments on Chatter Public Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_comments_on_otherCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Share Comments on Other Chatter Profiles</description>
        <label>Share Comments on Other Chatter Profiles</label>
        <type>Checkbox</type>
    </fields>
    <label>ChatterPolicy</label>
</CustomObject>